--- a/16-Asynchronous/starter/index.html
+++ b/16-Asynchronous/starter/index.html
@@ -27,6 +27,8 @@
         -->
     </div>
     <button class="btn-country">Where am I?</button>
+    <!-- <button type="button" id="valid-country">Fetch using valid country name </button> -->
+    <!-- <button type="button" id="invalid-country">Fetch using invalid country name </button> -->
     <div class="images"></div>
   </main>
 </body>
