--- a/17-Modern-JS-Modules-Tooling/starter/index.html
+++ b/17-Modern-JS-Modules-Tooling/starter/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <!-- <script type="module" defer src="script.js"></script> -->
 
-  <script type="module" defer src="script.js"></script>
+  <script defer src="06. Modern and Clean Code.js"></script>
   <title>Modern JavaScript Development: Modules and Tooling</title>
   <style>
     body {
