--- a/18-forkify/starter/index.html
+++ b/18-forkify/starter/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
 
   <link rel="stylesheet" href="src/sass/main.scss" />
-  <script defer src="src/js/controller.js" type="module"></script>
+  <script type="module" defer src="src/js/controller.js"></script>
 
   <title>forkify // Search over 1,000,000 recipes</title>
 </head>
@@ -272,7 +272,7 @@
         <h3 class="upload__heading">Ingredients</h3>
         <label>Ingredient 1</label>
         <input value="0.5,kg,Rice" type="text" required name="ingredient-1"
-          placeholder="Format: 'Quantity,Unit,Description'" />
+               placeholder="Format: 'Quantity,Unit,Description'" />
         <label>Ingredient 2</label>
         <input value="1,,Avocado" type="text" name="ingredient-2" placeholder="Format: 'Quantity,Unit,Description'" />
         <label>Ingredient 3</label>
